# timp-lab06

./: .wtf.swp
.github/workflows/: build.yml  deb_package.yml  dmp_package.yml  rmp_pachage.yml
formatter_ex_lib/: CMakeLists.txt  CMakeLists.txt.save
formatter_lib/: CMakeLists.txt
github/workflows/: .build.yml.swp  build.yml
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_application/wtf/: .realase.swp  .wtf.swp
solver_lib/: CMakeLists.txt  solver.cpp
